--- a/templates/admin/article/index.html.twig
+++ b/templates/admin/article/index.html.twig
@@ -4,8 +4,8 @@
     <h1>Gestion articles</h1>
 
     <a href="{{ path('app_admin_article_edit') }}"
-       class="btn btn-outline-primary">
-        Ecrire un article 
+       class="btn btn-outline-primary mb-3">
+        Ecrire un article
     </a>
 
     <table class="table table-striped">
