--- a/templates/admin/article/index.html.twig
+++ b/templates/admin/article/index.html.twig
@@ -24,7 +24,19 @@
                 <td>{{ article.publicationDate|date('d/m/Y H:i') }}</td>
                 <td>{{ article.category }}</td>
                 <td>{{ article.author }}</td>
-                <td></td>
+                <td>
+                    <a class="btn btn-primary"
+                       href="{{ path('app_admin_article_edit' , {'id' : article.id}) }}">
+                        Modifier
+                    </a>
+
+                    <a class="btn btn-primary"
+                       href="{{ path('app_admin_article_delete' , {'id' : article.id}) }}">
+                        Supprimer
+                    </a>
+
+
+                </td>
             </tr>
         {% endfor %}
     </table>
